--- a/java.html
+++ b/java.html
@@ -37,7 +37,7 @@
         textnode.appendChild(text2);
         document.body.appendChild(textnode);
     }
-    function determineWin(play, mov)
+    function determineWin(player, mov)
     {
         var textnode = document.createElement("text");
         if (player - mov == 0)
